syntax = "proto3";

option java_package = "pl.mati.blu.serialization";
option java_multiple_files = true;

message AutoMode {
    uint32 slot = 1;
    oneof mode {
        GradientMode mode_gradient = 2;
        FavPointsMode mode_fav_points = 3;
    }
    
}

message GradientMode {
    uint32 left_color = 1;
    float left_endpoint = 2;

    uint32 right_color = 3;
    float right_endpoint = 4;
}

message FavPointsMode {
    repeated FavPoint points = 1;
    float gradient_width = 2;
}

message FavPoint {
    uint32 color = 1;
    float point = 2;
}